# internal/dto/serach_response.go
@@ -1,0 +1,14 @@
+package dto
+
+type OrderSearchResponseDto struct {
+	Pagination Pagination            `json:"pagination"`
+	Orders     []GetOrderResponseDto `json:"orders"`
+}
+
+type Pagination struct {
+	TotalCount int64 `json:"totalCount"`
+	TotalPages int64 `json:"totalPages"`
+	Page       int64 `json:"page"`
+	Size       int64 `json:"size"`
+	HasMore    bool  `json:"hasMore"`
+}
